# platform-v2

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.broker  Dockerfile.decentralized  Dockerfile.full  README.md  docker-compose.decentralized.yml  docker-compose.server.yml  docker-compose.yml  release-please-config.json
.github/workflows/: ci.yml  release.yml
bins/csudo/: Cargo.toml
bins/csudo/src/: main.rs
bins/platform/src/: main.rs  server.rs  validator.rs
bins/utils/: Cargo.toml
bins/utils/src/: main.rs
bins/validator-decentralized/: Cargo.toml
bins/validator-decentralized/src/: main.rs
bins/validator-node/: Cargo.toml
bins/validator-node/src/: main.rs
challenges/challenge-template/: Cargo.toml
challenges/challenge-template/src/: lib.rs
crates/auto-updater/: Cargo.toml
crates/auto-updater/src/: lib.rs  updater.rs  version.rs  watcher.rs
crates/bittensor-integration/: Cargo.toml
crates/bittensor-integration/src/: block_sync.rs  blockchain_storage.rs  challenge_weight_collector.rs  client.rs  config.rs  lib.rs  mock.rs  tests.rs  validator_sync.rs  weights.rs
crates/challenge-orchestrator/: Cargo.toml
crates/challenge-orchestrator/src/: backend.rs  challenge_registry.rs  config.rs  docker.rs  evaluator.rs  health.rs  hot_reload.rs  lib.rs  lifecycle.rs  wasm_backend.rs  wasm_runtime.rs
crates/challenge-runtime/: Cargo.toml
crates/challenge-runtime/src/: anti_cheat_weights.rs  docker_runner.rs  epoch_sync.rs  executor.rs  host_functions.rs  integration_test.rs  lib.rs  llm_proxy.rs  manager.rs  miner_verifier.rs  p2p_broadcast.rs  runtime.rs  scheduler.rs  wasm_challenge.rs  weight_calculator.rs
crates/challenge-sdk/: Cargo.toml
crates/challenge-sdk/src/: challenge.rs  context.rs  crate_interface.rs  data.rs  database.rs  decentralized.rs  distributed_storage.rs  error.rs  lib.rs  p2p.rs  p2p_client.rs  platform_client.rs  routes.rs  server.rs  storage_client.rs  storage_schema.rs  submission_types.rs  test_challenge.rs  types.rs  wasm_challenge.rs  weight_types.rs  weights.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: governance_integration.rs  lib.rs  pbft.rs  stake_governance.rs  stake_weighted_pbft.rs  state.rs  types.rs
crates/consensus/tests/: integration_test.rs
crates/core/: Cargo.toml
crates/core/src/: challenge.rs  constants.rs  crypto.rs  error.rs  lib.rs  message.rs  schema_guard.rs  state.rs  types.rs
crates/distributed-db/: Cargo.toml
crates/distributed-db/src/: indexes.rs  lib.rs  merkle.rs  merkle_verification.rs  p2p_sync.rs  queries.rs  state.rs  storage.rs  sync.rs  test_utils.rs  transactions.rs
crates/distributed-storage/: Cargo.toml
crates/distributed-storage/src/: challenge_store.rs  dht.rs  error.rs  lib.rs  local.rs  query.rs  replication.rs  store.rs  submission.rs  weights.rs
crates/epoch/: Cargo.toml
crates/epoch/src/: aggregator.rs  commit_reveal.rs  lib.rs  manager.rs  mechanism_weights.rs
crates/network/: Cargo.toml
crates/network/src/: behaviour.rs  data_gossip.rs  lib.rs  node.rs  protection.rs  protocol.rs  state_sync.rs
crates/p2p-consensus/: Cargo.toml
crates/p2p-consensus/src/: config.rs  consensus.rs  lib.rs  messages.rs  network.rs  state.rs  storage_consensus.rs  validator.rs
crates/platform-server/: Cargo.toml
crates/platform-server/src/: challenge_proxy.rs  data_api.rs  lib.rs  main.rs  orchestration.rs  state.rs
crates/platform-server/src/api/: auth.rs  bridge.rs  challenges.rs  evaluations.rs  events.rs  leaderboard.rs  mod.rs  submissions.rs  validators.rs
crates/platform-server/src/db/: mod.rs  queries.rs  schema.rs
crates/platform-server/src/models/: mod.rs
crates/platform-server/src/websocket/: challenge_handler.rs  events.rs  handler.rs  mod.rs
crates/rpc-server/: Cargo.toml
crates/rpc-server/src/: auth.rs  handlers.rs  jsonrpc.rs  lib.rs  server.rs  types.rs
crates/secure-container-runtime/: Cargo.toml
crates/secure-container-runtime/src/: broker.rs  client.rs  policy.rs  protocol.rs  types.rs  ws_client.rs  ws_transport.rs
crates/secure-container-runtime/tests/: integration_tests.rs
crates/storage/: Cargo.toml
crates/storage/src/: distributed.rs  dynamic.rs  lib.rs  migration.rs  optimized.rs  types.rs
crates/subnet-manager/: Cargo.toml
crates/subnet-manager/src/: challenge_hotreload.rs  commands.rs  config.rs  health.rs  lib.rs  recovery.rs  snapshot.rs  update.rs
docker/: Dockerfile.challenge  Dockerfile.validator  docker-compose.sandbox.yml  docker-compose.yml  entrypoint.sh
docs/: challenges.md  sandbox.md
scripts/: build-wasm.sh  run-local-network.sh  run-sandbox-tests.sh  sandbox-down.sh  sandbox-up.sh  test-all.sh  test-single-validator.sh
tests/: Cargo.toml  bittensor_tests.rs  blockchain_state_tests.rs  challenge_runtime_tests.rs  e2e_test.rs  e2e_tests.rs  epoch_tests.rs  error_cases.rs  network_tests.rs  rpc_server_tests.rs  sandbox_multi_validator_tests.rs  storage_tests.rs  sudo_action_tests.rs
