[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/network",
    "crates/consensus",
    "crates/storage",
    "crates/challenge-sdk",
    "crates/epoch",
    "crates/challenge-runtime",
    "crates/bittensor-integration",
    "crates/subnet-manager",
    "crates/rpc-server",
    "crates/challenge-orchestrator",
    "crates/auto-updater",
    "crates/distributed-db",
    "bins/validator-node",
    "bins/csudo",
    "bins/utils",
    "tests",
]
# Note: Challenges are in separate repositories and import platform-challenge-sdk as a git dependency
# Note: WASM runtime removed - updates via git, version checked at handshake

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Platform Network"]
license = "MIT"

[workspace.dependencies]
# Bittensor
bittensor-rs = { git = "https://github.com/CortexLM/bittensor-rs", rev = "c4e6df8ef5005a594a15ec073b9425bc6a6edb09" }

# Async runtime
tokio = { version = "1.40", features = ["full", "sync", "macros", "rt-multi-thread"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
sp-core = "38.1.0"
parity-scale-codec = { version = "3.7.5", features = ["derive"] }

# P2P Networking
libp2p = { version = "0.54", features = ["tokio", "noise", "yamux", "tcp", "gossipsub", "mdns", "request-response", "macros", "identify", "cbor", "serde"] }

# Storage
sled = "0.34"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utils
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Testing
tempfile = "3.12"
