[package]
name = "platform-e2e-tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "e2e"
path = "e2e_test.rs"

[[test]]
name = "e2e_tests"
path = "e2e_tests.rs"

[[test]]
name = "error_cases"
path = "error_cases.rs"

[[test]]
name = "rpc_server_tests"
path = "rpc_server_tests.rs"

[[test]]
name = "storage_tests"
path = "storage_tests.rs"

[[test]]
name = "network_tests"
path = "network_tests.rs"

[[test]]
name = "bittensor_tests"
path = "bittensor_tests.rs"

[[test]]
name = "epoch_tests"
path = "epoch_tests.rs"

[[test]]
name = "challenge_runtime_tests"
path = "challenge_runtime_tests.rs"

[dependencies]
platform-core = { path = "../crates/core" }
platform-consensus = { path = "../crates/consensus" }
platform-storage = { path = "../crates/storage" }
platform-network = { path = "../crates/network" }
platform-challenge-runtime = { path = "../crates/challenge-runtime" }
platform-challenge-sdk = { path = "../crates/challenge-sdk" }
platform-epoch = { path = "../crates/epoch" }
platform-bittensor = { path = "../crates/bittensor-integration" }
platform-rpc = { path = "../crates/rpc-server" }
platform-subnet-manager = { path = "../crates/subnet-manager" }

tokio = { version = "1.40", features = ["full", "test-util"] }
tempfile = "3.12"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.10", features = ["v4"] }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
lz4_flex = "0.11"
hex = "0.4"
