[package]
name = "challenge-template"
version = "0.1.0"
edition = "2021"
description = "Template for Platform challenge crates - copy and customize"
license = "Apache-2.0"

[dependencies]
platform-challenge-sdk = { path = "../../crates/challenge-sdk" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
thiserror = "2.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
