[package]
name = "auto-updater"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Automatic validator updates for Mini-Chain"

[dependencies]
platform-core = { path = "../core" }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Docker
bollard = "0.18"

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utils
chrono = { workspace = true }
parking_lot = { workspace = true }
semver = "1.0"

[dev-dependencies]
tempfile = { workspace = true }
