[package]
name = "platform-bittensor"
version.workspace = true
edition.workspace = true
description = "Bittensor integration for Platform Chain validators"

[features]
default = []
# Enable test utilities (mock types) for integration tests in other crates
test-utils = []

[dependencies]
platform-core = { path = "../core" }
platform-challenge-sdk = { path = "../challenge-sdk" }
bittensor-rs = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Crypto (for AccountId32)
sp-core = "38.1.0"

# Utils
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }

# For mock module (hash-based hotkey generation)
sha2 = { workspace = true }
