[package]
name = "challenge-orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Docker-based challenge container orchestration for Mini-Chain"

[dependencies]
platform-core = { path = "../core" }

# Async
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Docker
bollard = "0.18"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client for challenge communication
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utils
chrono = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
