[package]
name = "platform-challenge-runtime"
version.workspace = true
edition.workspace = true
description = "Challenge execution runtime for Mini-Chain validators"

[dependencies]
platform-core = { path = "../core" }
platform-challenge-sdk = { path = "../challenge-sdk" }
platform-epoch = { path = "../epoch" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }

# HTTP/Web
axum = { version = "0.7", features = ["json", "macros"] }
reqwest = { version = "0.12", features = ["json"] }

# Crypto
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
