[package]
name = "platform-challenge-sdk"
version.workspace = true
edition.workspace = true
description = "SDK for developing challenges on Mini-Chain"

[dependencies]
platform-core = { path = "../core" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Database (each challenge gets its own)
sled = { workspace = true }

# Crypto
sha2 = { workspace = true }
hex = { workspace = true }
sp-core = { workspace = true }
parity-scale-codec = { workspace = true }
aes-gcm = "0.10"
rand = { workspace = true }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
