[package]
name = "platform-consensus"
version.workspace = true
edition.workspace = true

[dependencies]
platform-core = { path = "../core" }

tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

parking_lot = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
platform-storage = { path = "../storage" }

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
