[package]
name = "distributed-db"
version.workspace = true
edition.workspace = true
description = "Decentralized storage for platform with optimistic execution and Merkle state roots"

[dependencies]
# Local crates
platform-core = { path = "../core" }

# Database
rocksdb = "0.22"

# Merkle/Hashing
sha2 = { workspace = true }
blake3 = "1.5"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# P2P (for sync)
libp2p = { version = "0.54", features = ["tokio", "kad", "request-response", "cbor"] }

# Utils
parking_lot = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
