[package]
name = "platform-epoch"
version.workspace = true
edition.workspace = true
description = "Epoch management and weight commit-reveal for Mini-Chain"

[dependencies]
platform-core = { path = "../core" }
platform-challenge-sdk = { path = "../challenge-sdk" }

tokio = { workspace = true }
async-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

sha2 = { workspace = true }
hex = { workspace = true }

chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
