[package]
name = "platform-network"
version.workspace = true
edition.workspace = true

[dependencies]
platform-core = { path = "../core" }

tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

libp2p = { workspace = true }

tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

parking_lot = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
