[package]
name = "platform-server"
version.workspace = true
edition.workspace = true
description = "Central API Server for Platform Network - Manages challenges, submissions, and evaluations"
authors.workspace = true
license.workspace = true

[[bin]]
name = "platform-server"
path = "src/main.rs"

[dependencies]
platform-core = { path = "../core" }
challenge-orchestrator = { path = "../challenge-orchestrator" }
platform-bittensor = { path = "../bittensor-integration" }

# Web framework
axum = { version = "0.7", features = ["ws", "json", "multipart"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Database - PostgreSQL
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Crypto (sr25519 signatures)
sp-core = { workspace = true }
hex = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error monitoring (optional - enabled via SENTRY_DSN env var)
sentry = { workspace = true }

# CLI
clap = { workspace = true }

# HTTP client (for challenge proxy)
reqwest = { version = "0.12", features = ["json"] }

# Concurrency
parking_lot = { workspace = true }
dashmap = "6.0"

[dev-dependencies]
mockall = { workspace = true }
wiremock = { workspace = true }
rstest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
