[package]
name = "platform-storage"
version.workspace = true
edition.workspace = true

[dependencies]
platform-core = { path = "../core" }

serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

sled = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Crypto for checksums
sha2 = { workspace = true }

# Compression (LZ4 - fast)
lz4_flex = "0.11"

# Concurrency
parking_lot = { workspace = true }

tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
